--- a/CADA.csproj
+++ b/CADA.csproj
@@ -7,6 +7,11 @@
 		<AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
 	</PropertyGroup>
 
+	<PropertyGroup>
+		<!-- Other properties like OutputType and TargetFramework -->
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<Folder Include="Models\" />
 		<AvaloniaResource Include="Assets\**" />
